bug on mobile device

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -33,10 +33,6 @@ body {
 	box-shadow: $shadow;
 }
 
-.clipboard {
-	display: flex;
-}
-
 .return {
 	position: absolute;
 	top: 10px;
@@ -57,9 +53,9 @@ body {
 	opacity: 1;
 }
 .clipboard {
-	margin: 10px;
 	display: flex;
-	justify-content: space-around;
+	margin: 10px;
+	justify-content: space-between;
 }
 
 .btn {
@@ -110,4 +106,8 @@ body {
 			}
 		}
 	}
+}
+
+.share {
+	height: 30px;
 }
